--- a/client/styles/ui.css
+++ b/client/styles/ui.css
@@ -65,34 +65,44 @@
 #controls {
 	z-index: 2;
 	position: absolute;
-	bottom: 20px;
+	bottom: 10px;
 	width: 100%;
-	height: 267px;
+	height: 210px;
 }
 #controls #dashboard {
 	position: relative;
 	margin: 0px auto;
-	width: 423px;
-	height: 267px;
+	width: 330px;
+	height: 210px;
 	background: transparent url(../assets/dashboard.png) no-repeat top left;
+}
+
+#controls #dashboard #heading {
+	width: 120px;
+	height: 120px;
+	background: transparent url(../assets/compass_arrow.png) no-repeat top left;
+	position: absolute;
+	right: 105px;
+	top: 52px;
+	opacity: .3;
 }
 
 #controls #dashboard #speed {
 	color: #00FF00;
-	font-size: 45px;
+	font-size: 35px;
 	position: absolute;
-	right: 150px;
-	top: 111px;
+	right: 115px;
+	top: 85px;
 }
 
 #controls #dashboard #speed span {
-	font-size: 12px;
+	font-size: 10px;
 }
 
 #controls #dashboard #altitude {
 	color: #00CCFF;
-	font-size: 12px;
+	font-size: 10px;
 	position: absolute;
-	right: 25px;
-	top: 185px;
+	right: 15px;
+	top: 145px;
 }
