Major changes to editor, bringing it in line with designs

--- a/views/game/editor.jade
+++ b/views/game/editor.jade
@@ -3,7 +3,8 @@ html
 	head
 		include header
 	body
-		#ui
+		include editor/header_menu
 		#game
+		include editor/footer_menu
 	include editor/scripts
 	include footer
