--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -2,12 +2,13 @@ meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 title= title
 link(rel='stylesheet', href='/shared/styles/reset.css')
-link(rel='stylesheet', href='/shared/styles/jquery-ui-1.10.2.custom.css')
+link(rel='stylesheet', href='/shared/styles/bootstrap.min.css')
+link(rel="stylesheet",href="/shared/font-awesome/css/font-awesome.min.css")
 link(rel='stylesheet', href='/game/styles/game.css')
+link(rel='stylesheet', href='/game/styles/editor.css')
 link(rel='stylesheet', href='/game/styles/ui.css')
 script(src='/shared/scripts/jquery.min.js')
 script(src='/shared/scripts/jQueryRotateCompressed.2.2.js')
-script(src='/shared/scripts/jquery-ui-1.10.2.custom.min.js')
 script(src='/shared/scripts/socket.io.min.js')
 script(src='/shared/scripts/three.min.js')
 script(src='/shared/scripts/tween.min.js')
