--- a/views/game/editor/scripts.jade
+++ b/views/game/editor/scripts.jade
@@ -1,15 +1,6 @@
+script(src='/shared/scripts/bootstrap.min.js')
 script(src='/game/scripts/editor.js')
-script(src='/game/scripts/editor/properties.js')
-script(src='/game/scripts/editor/transform.js')
+script(src='/game/scripts/editor/toolbars.js')
 script(type='text/javascript')
 	var editor = new editor();
-	editor.properties = new properties();
-	editor.transform = new transform();
-
-	ui.makeDialog("editor_tools", editor.makeControls());
-	$("#editor_tools .button").button();
-	$("#editor_tools .menu").menu();
-	
-	ui.makeDialog("properties", editor.properties.makeControls());
-	ui.makeDialog("transform", editor.transform.makeControls());
-	editor.transform.render();
+	editor.toolbars = new toolbars();
