--- a/views/game/editor/footer_menu.jade
+++ b/views/game/editor/footer_menu.jade
@@ -15,8 +15,12 @@ footer
 				a(href='#')
 					i.icon-search
 					|  Scene explorer
-			li.selected
-				h3 Selected
+			li.selected 
+				h4 Selected
+					small 0
+				ul
+			li.logo
+				a(href='/editor') Langenium Map Editor
 			li.camera_info
 				i.icon-facetime-video.icon-3x.pull-left
 				ul.unstyled.pull-left
@@ -29,4 +33,3 @@ footer
 					li.x x:
 					li.y y:
 					li.z z:
-			li.logo
