--- a/views/game/editor/header_menu.jade
+++ b/views/game/editor/header_menu.jade
@@ -57,10 +57,15 @@ header
 				a(href='#') 
 					i.icon-gear.icon-large
 					|  Object properties
-			li.button
+			li.button.library
 				a(href='#') 
 					i.icon-reorder.icon-large
 					|  Object library
+				menu.sub_menu
+					a.window(href='#')
+						i.icon-list-alt
+						|  Make window
+					ul.unstyled
 			li.button
 				a(href='#') 
 					i.icon-gears.icon-large
