--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -5,7 +5,9 @@ link(rel='stylesheet', href='/shared/styles/reset.css')
 link(rel='stylesheet', href='/shared/styles/bootstrap.min.css')
 link(rel="stylesheet",href="/shared/font-awesome/css/font-awesome.min.css")
 link(rel='stylesheet', href='/game/styles/game.css')
-link(rel='stylesheet', href='/game/styles/editor.css')
+- if (editor==true)
+	link(rel='stylesheet', href='/game/styles/editor.css')
+	link(rel='stylesheet', href='/game/styles/editor/library.css')
 link(rel='stylesheet', href='/game/styles/ui.css')
 script(src='/shared/scripts/jquery.min.js')
 script(src='/shared/scripts/jQueryRotateCompressed.2.2.js')
