Created new library to process textures and materials

--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -34,6 +34,7 @@ script(src='/game/scripts/objects/bots.js')
 script(src='/game/scripts/objects/environment.js')
 script(src='/game/scripts/objects/players.js')
 script(src='/game/scripts/objects/projectiles.js')
+script(src='/game/scripts/textures.js')
 script(src='/game/scripts/ui.js')
 script(type='text/javascript')
 	/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
@@ -52,6 +53,7 @@ script(type='text/javascript')
 
 	controls = new controls();
 	objects = new objects();
+	textures = new textures();
 
 	effects = new effects();
 
