- Removed all potentially unpainted meshes, will re-export once library   interface is styled a bit more - Object scales are correct - Always matches correct set of object from library in events.js now

--- a/views/game/editor/library.jade
+++ b/views/game/editor/library.jade
@@ -3,6 +3,7 @@
 		.name= objects[object_index].name
 		.scale= objects[object_index].details.scale
 		.type= objects[object_index].type
-		a.button.add(href='#',onclick="editor.library.addObject('#{objects[object_index].name}','#{objects[object_index].type}','#{objects[object_index].details.scale}')")
+		.sub_type= [object_index].sub_type
+		a.button.add(href='#',onclick="editor.library.addObject('#{objects[object_index].name}','#{objects[object_index].type}','#{objects[object_index].details.url}','#{objects[object_index].details.scale}')")
 			i.icon-plus
 			|  Add
