- Objects are selectable and transformable - Saving before working on login and database save

--- a/public/game/styles/editor/window.css
+++ b/public/game/styles/editor/window.css
@@ -16,6 +16,11 @@ footer li.window {
 	bottom: 100px;
 }
 li.window a.move { 
+	-moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 	position: absolute;
 	top: 0;
 	left: 0px;
