--- a/views/game/editor/header_menu.jade
+++ b/views/game/editor/header_menu.jade
@@ -61,6 +61,7 @@ header
 					ul.unstyled
 						li
 							select.object_list
+								option
 						li.details
 							h3 Information
 							ul
@@ -81,23 +82,57 @@ header
 							ul
 								li.position
 									strong Position
-									label(for='position_x') X
-									input.x(type='text',name='position_x',placeholder='X')
-									label(for='position_y') Y
-									input.y(type='text',name='position_y',placeholder='Y')
-									label(for='position_z') Z
-									input.z(type='text',name='position_z',placeholder='Z')
+									.x
+										label(for='position_x') X
+										input.x(type='text',name='position_x',placeholder='X')
+										a.add(href='#')
+											i.icon-plus-sign-alt
+										a.minus(href='#')
+											i.icon-minus-sign-alt
+									.y
+										label(for='position_y') Y
+										input.y(type='text',name='position_y',placeholder='Y')
+										a.add(href='#')
+											i.icon-plus-sign-alt
+										a.minus(href='#')
+											i.icon-minus-sign-alt
+									.z
+										label(for='position_z') Z
+										input.z(type='text',name='position_z',placeholder='Z')
+										a.add(href='#')
+											i.icon-plus-sign-alt
+										a.minus(href='#')
+											i.icon-minus-sign-alt
 								li.scale
 									label(for='scale') Scale
 									input(type='text',name='scale')
+									a.add(href='#')
+										i.icon-plus-sign-alt
+									a.minus(href='#')
+										i.icon-minus-sign-alt
 								li.rotation
 									strong Rotation
-									label(for='rotation_x') X
-									input.x(type='text',name='rotation_x',placeholder='X')
-									label(for='rotation_y') Y
-									input.y(type='text',name='rotation_y',placeholder='Y')
-									label(for='rotation_z') Z
-									input.z(type='text',name='rotation_z',placeholder='Z')
+									.x
+										label(for='rotation_x') X
+										input.x(type='text',name='rotation_x',placeholder='X')
+										a.add(href='#')
+											i.icon-plus-sign-alt
+										a.minus(href='#')
+											i.icon-minus-sign-alt
+									.y
+										label(for='rotation_y') Y
+										input.y(type='text',name='rotation_y',placeholder='Y')
+										a.add(href='#')
+											i.icon-plus-sign-alt
+										a.minus(href='#')
+											i.icon-minus-sign-alt
+									.z
+										label(for='rotation_z') Z
+										input.z(type='text',name='rotation_z',placeholder='Z')
+										a.add(href='#')
+											i.icon-plus-sign-alt
+										a.minus(href='#')
+											i.icon-minus-sign-alt
 								li.increments
 									label(for='increments') Increments
 									input(type='text',name='increments')
