--- a/public/game/styles/editor/object_properties.css
+++ b/public/game/styles/editor/object_properties.css
@@ -5,13 +5,13 @@
 
 .object_properties menu {
 	padding: 1em;
-	width: 560px;
+	width: 580px;
 }
 .window.object_properties .object_list {
-	width: 560px;
+	width: 580px;
 }
 .object_properties .object_list {
-	width: 520px;
+	width: 540px;
 }
 .object_properties .details h3,
 .object_properties .transform h3 {
@@ -66,6 +66,7 @@
 
 .object_properties .transform .position,
 .object_properties .transform .rotation {
+	position: relative;
 	float: left;
 	clear: left;
 	padding-left: 70px;
@@ -77,6 +78,7 @@
 }
 .object_properties .transform .scale,
 .object_properties .transform .increments {
+	position: relative;
 	width: 146px;
 	float: left;
 	clear: right;
@@ -87,12 +89,55 @@
 .object_properties .transform .scale label,
 .object_properties .transform .increments label  {
 	float: left;
-	padding: 0 1em;
+	padding: .45em;
 	height: 20px;
 }
+.object_properties .transform .position .x,
+.object_properties .transform .position .y,
+.object_properties .transform .position .z,
+.object_properties .transform .rotation .x,
+.object_properties .transform .rotation .y,
+.object_properties .transform .rotation .z {
+	float: left;
+	position: relative;
+}
 
+.object_properties .transform .position .add,
+.object_properties .transform .scale .add,
+.object_properties .transform .rotation .add {
+	display: inline-block;
+	margin-top: -4px;
+	margin-left: -17px;
+	color: #666666;
+	position: absolute;
+	width: auto!important;
+	padding: 0!important;
+}
+.object_properties .transform .position .minus,
+.object_properties .transform .scale .minus,
+.object_properties .transform .rotation .minus {
+	display: inline-block;
+	margin-top: 14px;
+	margin-left: -17px;
+	color: #666666;
+	position: absolute;
+	width: auto!important;
+	padding: 0!important;
+}
+.object_properties .transform .scale .add,
+.object_properties .transform .scale .minus {
+	display: inline-block;
+	margin-left: 101px;
+}
+
+.object_properties .transform .position a:hover,
+.object_properties .transform .scale a:hover,
+.object_properties .transform .rotation a:hover {
+	color: #FFFFFF;
+}
 .object_properties .transform .position input,
 .object_properties .transform .rotation input {
+	margin-right: 20px;
 	float: left;
 	width: 60px;
 	height: 20px;
