--- a/views/website/header.jade
+++ b/views/website/header.jade
@@ -1,6 +1,6 @@
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-title Langenium 
+title= title 
 link(rel='shortcut icon', href='/favicon.ico')
 link(rel='stylesheet', href='/shared/styles/reset.css')
 link(rel='stylesheet', href='/website/styles/screen.css')
