More or less all working. Now going to work on camera function and character mode

--- a/views/game/editor/library.jade
+++ b/views/game/editor/library.jade
@@ -4,6 +4,6 @@
 		.sub_type= objects[object_index].sub_type
 		.name= objects[object_index].name
 		.scale= objects[object_index].details.scale
-		a.button.add(href='#',onclick="editor.object_library.addObject('#{objects[object_index].name}','#{objects[object_index].type}','#{objects[object_index].sub_type}','#{objects[object_index].details.url}','#{objects[object_index].details.scale}')")
+		a.button.add(href='#',onclick="editor.object_library.addObject('#{objects[object_index]._id}','#{objects[object_index].name}','#{objects[object_index].type}','#{objects[object_index].sub_type}','#{objects[object_index].details.url}','#{objects[object_index].details.scale}')")
 			i.icon-plus
 			|  Add
