Brought effects into line with code style of the rest of the engine

--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -47,7 +47,7 @@ script(type='text/javascript')
 	// Global variables for the THREE JS client
 	var scene, water_tiles, sky, M = 500000;
 	var keyboard = new THREEx.KeyboardState(), clock = new THREE.Clock();
-	var player, bots = [], bullets = [], particle_systems = [], ui = [];
+	var player, bots = [], particle_systems = [], ui = [];
 
 	client = new client();
 	client.updateWinSizeVariables();
