--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -45,9 +45,9 @@ script(type='text/javascript')
 	\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 
 	// Global variables for the THREE JS client
-	var scene, water_tiles, sky, M = 500000;
+	var scene, sky, M = 500000;
 	var keyboard = new THREEx.KeyboardState(), clock = new THREE.Clock();
-	var player, bots = [], particle_systems = [], ui = [];
+	var player, bots = [];
 
 	client = new client();
 	client.updateWinSizeVariables();
