Fixed big buttons on home page for SEO

--- a/views/website/pages/home.jade
+++ b/views/website/pages/home.jade
@@ -95,20 +95,20 @@
 				h3 Game guide
 				ul
 					li
-						a(href='#')
+						a(href='/guide/Interface%20and%20controls',title='How to play')
 							span How to play
 					li
-						a(href='#')
+						a(href='/guide/Storyline',title='Story')
 							span Story
 					li
-						a(href='#')
-							span Locations
+						a(href='/guide/World%20map',title='World Map')
+							span World Map
 					li
-						a(href='#')
+						a(href='/guide/Factions%20and%20races',title='Factions')
 							span Factions
 					li
-						a(href='#')
+						a(href='/guide/Ships',title='Ships')
 							span Ships
 					li
-						a(href='#')
-							span Enemies
+						a(href='/guide/Economy',title='Economy')
+							span Economy
