Corrected control instructions

--- a/views/website/pages/home.jade
+++ b/views/website/pages/home.jade
@@ -74,7 +74,11 @@
 						tr
 							td(colspan='2') 
 								strong Left-Click Hold
-							td(colspan='2') Rotate view
+							td(colspan='2') Fire
+						tr
+							td(colspan='2') 
+								strong Right-Click Hold
+							td(colspan='2') Rotate View
 				a(href='/play',target='_new').button 
 					span Launch game
 				p.small Requires Google Chrome or Firefox. Opera and IE currently don't support THREEJS
