--- a/views/website/pages/home.jade
+++ b/views/website/pages/home.jade
@@ -68,6 +68,12 @@
 								strong Shift
 							td Down
 						tr
+							td
+								strong X
+							td Enter\Exit Ship
+							td
+							td
+						tr
 							td(colspan='2') 
 								strong Mouse-Scroll
 							td(colspan='2') Zoom
