- Building instances from database, still need to line up events.js and   others - Refined camera rotation for ship - Refined camera for character

--- a/public/game/styles/game.css
+++ b/public/game/styles/game.css
@@ -2,6 +2,9 @@
 	Langenium Game Styles
 	Author: Paul Brzeski
 **************************************************************/
+html, body {
+	background-color: #000000;
+}
 body {
 	margin: 0;
 	overflow: hidden;
