--- a/views/game/client.jade
+++ b/views/game/client.jade
@@ -4,5 +4,7 @@ html
 		include header
 	body
 		#ui
+			#latencyLabel(style="position: absolute;")
+			canvas#latencyBox(width="97", height="43", style="display: inline-block; position: absolute;")
 		#game
 	include footer
