--- a/views/game/editor/footer_menu.jade
+++ b/views/game/editor/footer_menu.jade
@@ -25,6 +25,9 @@ footer
 				h4 Selected
 					small 0
 				ul
+			li.stats
+				#latencyLabel(style="position: absolute;")
+				canvas#latencyBox(width="97", height="43", style="display: inline-block; position: absolute;")
 			li.logo
 				a(href='/editor') Langenium Map Editor
 			li.camera_info
