Small revisions to wateR

--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -27,6 +27,7 @@ script(src='/game/scripts/controls/editor_controls.js')
 script(src='/game/scripts/controls/flight.js')
 script(src='/game/scripts/effects.js')
 script(src='/game/scripts/effects/bullets.js')
+script(src='/game/scripts/effects/clouds.js')
 script(src='/game/scripts/effects/particles.js')
 script(src='/game/scripts/effects/water.js')
 script(src='/game/scripts/engine.js')
